--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
         <p>20</p>
     </div>
     <script src="./zscroller.js"></script>
+    <script>
+        ZScroller.init('container');
+    </script>
 </body>
 </html>
